# oot-framework

./: .gitignore  .lycheeignore  AGENTS.md  BUILD-INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GENERATIONS.md  GLOSSARY.md  MANIFEST.md  MANIFESTO.md  QUICKSTART.md  README.md  SPEC.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.md  proposal.md
.github/workflows/: auto-label.yml  excel-validation.yml  klarna-gate.yml  lint-skills.yml  markdown-lint.yml  python-tests.yml
docs/: 00-quickstart-cloud.md  00-quickstart-privacy.md  01-installing-the-curator.md  02-installing-routines-privacy.md  02-installing-routines.md  03-onboarding-a-partner.md  04-running-the-business-review.md  05-using-the-klarna-test.md  06-when-to-call-a-lawyer.md  07-troubleshooting.md  08-faq.md  AUTOMATION-PIPELINE.md  ECOSYSTEM.md  MODULES.md  SPEC.md  glossary.md
docs/internal/: ADR-001-cloud-routine-excel-writeback.md  ADR-002-firm-brain-curator-shared-brain.md  ADR-003-community-track-no-subscription.md  ADR-004-klarna-status-column.md  (+4 more)
examples/: README.md  SPEC.md
governance/: DECISION-RIGHTS.md  EU-AI-ACT.md  KLARNA-TEST.md  SECRETS-POLICY.md
installer/: README.md  __init__.py  bootstrap.sh  wizard.py
research/: README.md  external-resources.md
routines/: README.md  SPEC.md
scripts/: __init__.py  build_excel.py  validate_skills.py
skills/: _TEMPLATE_SKILL.md
templates/: output-spec.md  partner-charter.md
tests/: test_build_excel.py  test_validate_skills.py  test_wizard_state.py
(+152 files in other folders)
